--- a/index.html
+++ b/index.html
@@ -62,6 +62,151 @@
         </div>
     </section>
     <!-- Hero section END -->
+
+    <!-- Our plants seciton star -->
+
+    <div class="mt-20 xl:mt-40 text-center">
+
+
+        <h1 class="text-4xl md:text-6xl xl:text-8xl text-center font-bold leading-tight">
+            <span class="text-orange-500">Our</span>
+            <span class="text-black">Plants</span>
+        </h1>
+
+
+        <!-- For PC and Mobile Display -->
+        <div class="flex justify-center">
+            <!-- For PC Display -->
+            <p class="text-gray-500 text-2xl hidden xl:block pt-4 text-center max-w-4xl">
+                Indulge your senses with the beauty and fragrance of our fresh flower shop.
+                From classic roses to exotic blooms, we offer a wide variety of fresh.
+            </p>
+
+            <!-- For Mobile Display -->
+            <p class="text-gray-500 text-base xl:hidden block pt-4 text-center px-4">
+                Indulge your senses with the beauty and fragrance of
+                our fresh flower shop. From classic roses to exotic
+                blooms, we offer a wide variety of fresh flowers that
+                are perfect for any occasion.
+            </p>
+        </div>
+
+    </div>
+    <!-- Card section (Start) -->
+    <!-- card -->
+    <section class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 w-11/12 mx-auto mt-10">
+
+        <!-- Card 1 -->
+        <div class="p-6 max-w-3xl mx-auto">
+            <img class="w-full h-[400px] object-cover" src="assets/sample-flower-image.png" alt="Flower" />
+            <p class="text-center mt-6 text-2xl text-gray-800">Lily Blossom</p>
+            <p class="text-center font-bold text-2xl text-black">20 USD</p>
+
+            <!-- Cart Button -->
+            <div class="flex justify-center mt-6">
+                <button class="bg-orange-600 hover:bg-black transition text-white px-8 py-3 w-full max-w-[400px]">
+                    Add to Cart
+                </button>
+            </div>
+        </div>
+        <!-- Card 2  -->
+        <div class="p-6 max-w-3xl mx-auto">
+            <img class="w-full h-[400px] object-cover" src="assets/sample-flower-image.png" alt="Flower" />
+            <p class="text-center mt-6 text-2xl text-gray-800">Lily Blossom</p>
+            <p class="text-center font-bold text-2xl text-black">20 USD</p>
+
+            <!-- Cart Button -->
+            <div class="flex justify-center mt-6">
+                <button class="bg-orange-600 hover:bg-black transition text-white px-8 py-3 w-full max-w-[400px]">
+                    Add to Cart
+                </button>
+            </div>
+        </div>
+        <!-- Card 3 -->
+        <div class="p-6 max-w-3xl mx-auto">
+            <img class="w-full h-[400px] object-cover" src="assets/sample-flower-image.png" alt="Flower" />
+            <p class="text-center mt-6 text-2xl text-gray-800">Lily Blossom</p>
+            <p class="text-center font-bold text-2xl text-black">20 USD</p>
+
+            <!-- Cart Button -->
+            <div class="flex justify-center mt-6">
+                <button class="bg-orange-600 hover:bg-black transition text-white px-8 py-3 w-full max-w-[400px]">
+                    Add to Cart
+                </button>
+            </div>
+        </div>
+        <!-- Card 4  -->
+        <div class="p-6 max-w-3xl mx-auto">
+            <img class="w-full h-[400px] object-cover" src="assets/sample-flower-image.png" alt="Flower" />
+            <p class="text-center mt-6 text-2xl text-gray-800">Lily Blossom</p>
+            <p class="text-center font-bold text-2xl text-black">20 USD</p>
+
+            <!-- Cart Button -->
+            <div class="flex justify-center mt-6">
+                <button class="bg-orange-600 hover:bg-black transition text-white px-8 py-3 w-full max-w-[400px]">
+                    Add to Cart
+                </button>
+            </div>
+        </div>
+        <!-- Card 5-->
+        <div class="p-6 max-w-3xl mx-auto">
+            <img class="w-full h-[400px] object-cover" src="assets/sample-flower-image.png" alt="Flower" />
+            <p class="text-center mt-6 text-2xl text-gray-800">Lily Blossom</p>
+            <p class="text-center font-bold text-2xl text-black">20 USD</p>
+
+            <!-- Cart Button -->
+            <div class="flex justify-center mt-6">
+                <button class="bg-orange-600 hover:bg-black transition text-white px-8 py-3 w-full max-w-[400px]">
+                    Add to Cart
+                </button>
+            </div>
+        </div>
+        <!-- Card 6 -->
+        <div class="p-6 max-w-3xl mx-auto">
+            <img class="w-full h-[400px] object-cover" src="assets/sample-flower-image.png" alt="Flower" />
+            <p class="text-center mt-6 text-2xl text-gray-800">Lily Blossom</p>
+            <p class="text-center font-bold text-2xl text-black">20 USD</p>
+
+            <!-- Cart Button -->
+            <div class="flex justify-center mt-6">
+                <button class="bg-orange-600 hover:bg-black transition text-white px-8 py-3 w-full max-w-[400px]">
+                    Add to Cart
+                </button>
+            </div>
+        </div>
+        <!-- Card -->
+        <div class="p-6 max-w-3xl mx-auto">
+            <img class="w-full h-[400px] object-cover" src="assets/sample-flower-image.png" alt="Flower" />
+            <p class="text-center mt-6 text-2xl text-gray-800">Lily Blossom</p>
+            <p class="text-center font-bold text-2xl text-black">20 USD</p>
+
+            <!-- Cart Button -->
+            <div class="flex justify-center mt-6">
+                <button class="bg-orange-600 hover:bg-black transition text-white px-8 py-3 w-full max-w-[400px]">
+                    Add to Cart
+                </button>
+            </div>
+        </div>
+        <!-- Card 8  -->
+        <div class="p-6 max-w-3xl mx-auto">
+            <img class="w-full h-[400px] object-cover" src="assets/sample-flower-image.png" alt="Flower" />
+            <p class="text-center mt-6 text-2xl text-gray-800">Lily Blossom</p>
+            <p class="text-center font-bold text-2xl text-black">20 USD</p>
+
+            <!-- Cart Button -->
+            <div class="flex justify-center mt-6">
+                <button class="bg-orange-600 hover:bg-black transition text-white px-8 py-3 w-full max-w-[400px]">
+                    Add to Cart
+                </button>
+            </div>
+        </div>
+
+
+
+
+
+    </section>
+    <!-- our plants seciton enx -->
 </body>
 
 </html>
