--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
 
 <body>
     <!-- This is the part of Navber (Start) -->
-    <nav
-        class="flex justify-between items-center p-6 text-black w-11/12 mx-auto text-[20px] font-semibold text-gray-500">
+    <nav class="flex justify-between items-center p-6 text-black w-11/12 mx-auto text-[20px] font-semibold text-gray-500"
         <div class=" logo">
-            <img src="assets/logo.png" alt="logo" class="w-20 h-10 md:w-40 md:h-20 ">
+        <img src="assets/logo.png" alt="logo" class="w-20 h-10 md:w-40 md:h-20 ">
         </div>
         <div class="manu">
             <ul class="flex space-x-4 ">
@@ -31,7 +30,7 @@
 
 
     <!-- This is the part of Hero section (Start) -->
-    <section class="w-11/12 mx-auto flex flex-col-reverse lg:flex-row justify-between mt-30 ">
+    <section class="w-11/12 pt-28 mx-auto flex flex-col-reverse lg:flex-row justify-between mt-10 lg:mt-30">
         <!-- Text section -->
         <div class="display-flex ">
             <div class=" xl:mt-35 ">
@@ -206,7 +205,174 @@
 
 
     </section>
-    <!-- our plants seciton enx -->
+    <!-- our plants seciton end -->
+
+    <section class=" lg:flex justify-center gap-10 lg:gap-16 mt-10 lg:mt-30">
+        <!-- flowe plants lover strt -->
+        <div class="relative  ">
+            <!-- Trusted badge -->
+            <div class="absolute top-[-90px] right-[-80px] hidden lg:flex">
+                <img src="assets/trusted-badge.png" alt="" class="h-60 ">
+            </div>
+
+            <!-- Flower store image -->
+            <div>
+                <img class="p-6 lg:p-0 h-auto w-full  flex lg:hidden" src="assets/flower-store.png" alt="">
+                <img class="p-6 lg:p-0 h-[700px] hidden lg:flex w-full" src="assets/flower-store.png" alt="">
+            </div>
+        </div>
+
+        <div class="pr-10">
+            <h1 class="text-3xl lg:text-7xl pl-6 lg:mt-12">Flower & Plants Lover</h1>
+            <ul class="space-y-6 mt-6 pl-8">
+                <li class="flex items-start gap-2 text-gray-500 lg:text-[25px]">
+                    <span class="text-3xl font-extrabold text-gray-600 leading-none mt-1">•</span>
+                    <p>
+                        Indulge your senses with the beauty and <br />
+                        fragrance of our fresh flower shop. From classic <br />
+                        roses to exotic blooms, we offer a wide variety <br />
+                        of fresh.
+                    </p>
+                </li>
+                <li class="flex items-start gap-2 text-gray-500 lg:text-[25px]">
+                    <span class="text-3xl font-extrabold text-gray-600 leading-none mt-1">•</span>
+                    <p>
+                        Indulge your senses with the beauty and <br />
+                        fragrance of our fresh flower shop. From classic <br />
+                        roses to exotic blooms, we offer a wide variety <br />
+                        of fresh.
+                    </p>
+                </li>
+                <li class="flex items-start gap-2 text-gray-500 lg:text-[25px]">
+                    <span class="text-3xl font-extrabold text-gray-600 leading-none mt-1">•</span>
+                    <p>
+                        Indulge your senses with the beauty and <br />
+                        fragrance of our fresh flower shop. From classic <br />
+                        roses to exotic blooms, we offer a wide variety <br />
+                        of fresh.
+                    </p>
+                </li>
+            </ul>
+        </div>
+
+        <!-- flowe plants lover End -->
+    </section>
+
+    <!-- latest deals start -->
+    <section class="mt-10 w-11/12 mx-auto">
+        <!-- Title Section -->
+        <div class="text-center mt-10 md:mt-50 mb-10">
+            <h1 class="text-orange-500 font-bold text-4xl md:text-6xl lg:text-7xl xl:text-8xl">
+                Latest <span class="text-black">Deals</span>
+            </h1>
+            <p class="text-gray-500 text-base md:text-2xl max-w-4xl mx-auto mt-4 text-center">
+                Indulge your senses with the beauty and fragrance of our fresh flower shop.
+                <br class="hidden md:block">
+                From classic roses to exotic blooms, we offer a wide variety of fresh.
+            </p>
+        </div>
+
+        <!--Deals Card section start-->
+        <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+            <!--all Cards -->
+            <div class="flex flex-col gap-6">
+                <!-- Card 1 -->
+                <div
+                    class="bg-[url('assets/deal-ana.png')] bg-cover bg-center h-[200px] flex flex-col justify-center items-center text-white rounded-xl shadow-md">
+                    <h1 class="text-center font-bold text-3xl">60% of // Bloom Plant</h1>
+                    <p class="text-center font-bold text-lg mt-2">Shop Now</p>
+                </div>
+
+                <!-- Card 2 -->
+                <div
+                    class="bg-[url('assets/deal-ana.png')] bg-cover bg-center h-[200px] flex flex-col justify-center items-center text-white rounded-xl shadow-md">
+                    <h1 class="text-center font-bold text-3xl">60% of // Bloom Plant</h1>
+                    <p class="text-center font-bold text-lg mt-2">Shop Now</p>
+                </div>
+            </div>
+
+            <!-- Right Column with Single Card -->
+            <div
+                class="bg-[url('assets/deal-bloom.png')] bg-cover bg-center h-[416px] flex flex-col justify-center items-center text-white rounded-xl shadow-md">
+                <h1 class="text-center font-bold text-3xl">25% of // Bloom Plant</h1>
+                <p class="text-center font-bold text-lg mt-2">Shop Now</p>
+            </div>
+        </div>
+    </section>
+    <!--Deals Card section end-->
+
+
+
+
+    <!-- contact strt -->
+    <section
+        class="  mx-auto mt-30 text-center bg-[url('assets/news-letter-bg.png')] bg-cover bg-center h-[416px] flex flex-col justify-center items-center px-4">
+
+        <h1 class="text-3xl md:text-4xl text-white font-bold mb-4">
+            Join the Colorful Bunch
+        </h1>
+        <div class="flex sm:flex-row items-center w-full max-w-md ">
+            <input type="text" placeholder="Enter your email"
+                class="border border-gray-300 bg-white p-2 w-full  focus:outline-none" />
+            <button class="bg-orange-600 text-white px-4 py-2  hover:bg-black transition-colors duration-300">
+                Subscribe
+            </button>
+        </div>
+
+    </section>
+    <!-- contact End -->
+
+    <!-- footer strt -->
+    <footer class="bg-gray-100 py-10 px-4">
+        <div class="w-11/12 mx-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8 text-gray-700">
+
+
+            <div>
+                <img src="assets/logo.png" alt="Logo" class="w-32 mb-4">
+                <p class="text-sm">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore quos, corrupti soluta assumenda
+                    enim similique.
+                </p>
+            </div>
+
+
+            <div>
+                <h3 class="font-bold mb-3">Navigation</h3>
+                <ul class="space-y-2 text-sm">
+                    <li><a href="#" class="hover:text-orange-600">Home</a></li>
+                    <li><a href="#" class="hover:text-orange-600">About Us</a></li>
+                    <li><a href="#" class="hover:text-orange-600">Blog</a></li>
+                    <li><a href="#" class="hover:text-orange-600">FAQ</a></li>
+                    <li><a href="#" class="hover:text-orange-600">Contact Us</a></li>
+                </ul>
+            </div>
+
+
+            <div>
+                <h3 class="font-bold mb-3">Resources</h3>
+                <ul class="space-y-2 text-sm">
+                    <li><a href="#" class="hover:text-orange-600">Features</a></li>
+                    <li><a href="#" class="hover:text-orange-600">Pricing</a></li>
+                    <li><a href="#" class="hover:text-orange-600">Privacy Policy</a></li>
+                    <li><a href="#" class="hover:text-orange-600">Terms & Service</a></li>
+                    <li><a href="#" class="hover:text-orange-600">Help Desk</a></li>
+                </ul>
+            </div>
+
+
+            <div>
+                <h3 class="font-bold mb-3">Follow Us</h3>
+                <div class="flex gap-4">
+                    <a href="#"><img src="assets/icon-youtube.png" alt="YouTube" class="w-6"></a>
+                    <a href="#"><img src="assets/icon-twitter.png" alt="Twitter" class="w-6"></a>
+                    <a href="#"><img src="assets/icon-linkedin.png" alt="LinkedIn" class="w-6"></a>
+                    <a href="#"><img src="assets/icon-facebook.png" alt="Facebook" class="w-6"></a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- footer end -->
 </body>
 
 </html>
