--- a/index.html
+++ b/index.html
@@ -278,24 +278,24 @@
             <div class="flex flex-col gap-6">
                 <!-- Card 1 -->
                 <div
-                    class="bg-[url('assets/deal-ana.png')] bg-cover bg-center h-[200px] flex flex-col justify-center items-center text-white rounded-xl shadow-md">
-                    <h1 class="text-center font-bold text-3xl">60% of // Bloom Plant</h1>
-                    <p class="text-center font-bold text-lg mt-2">Shop Now</p>
+                    class="bg-[url('assets/deal-bloom.png')] bg-cover bg-center h-[200px] flex flex-col justify-center items-center text-white rounded-xl shadow-md">
+                    <h1 class="text-center font-bold text-3xl">60% Off | Bloom Plant</h1>
+                    <p class="text-center font-bold text-lg mt-2 underline">Shop Now</p>
                 </div>
 
                 <!-- Card 2 -->
                 <div
                     class="bg-[url('assets/deal-ana.png')] bg-cover bg-center h-[200px] flex flex-col justify-center items-center text-white rounded-xl shadow-md">
-                    <h1 class="text-center font-bold text-3xl">60% of // Bloom Plant</h1>
-                    <p class="text-center font-bold text-lg mt-2">Shop Now</p>
+                    <h1 class="text-center font-bold text-3xl">30% Off | Ana Plant</h1>
+                    <p class="text-center font-bold text-lg mt-2 underline">Shop Now</p>
                 </div>
             </div>
 
             <!-- Right Column with Single Card -->
             <div
-                class="bg-[url('assets/deal-bloom.png')] bg-cover bg-center h-[416px] flex flex-col justify-center items-center text-white rounded-xl shadow-md">
-                <h1 class="text-center font-bold text-3xl">25% of // Bloom Plant</h1>
-                <p class="text-center font-bold text-lg mt-2">Shop Now</p>
+                class="bg-[url('assets/deal-zabo.png')] bg-cover bg-center h-[416px] flex flex-col justify-center items-center text-white rounded-xl shadow-md">
+                <h1 class="text-center font-bold text-3xl">25% Off | Zabo Plant</h1>
+                <p class="text-center font-bold text-lg mt-2 underline">Shop Now</p>
             </div>
         </div>
     </section>
@@ -329,16 +329,15 @@
 
             <div>
                 <img src="assets/logo.png" alt="Logo" class="w-32 mb-4">
-                <p class="text-sm">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore quos, corrupti soluta assumenda
-                    enim similique.
+                <p class="text-2xl text-gray-500">
+                    Indulge your senses with the beauty and fragrance of our fresh flower shop.
                 </p>
             </div>
 
 
             <div>
-                <h3 class="font-bold mb-3">Navigation</h3>
-                <ul class="space-y-2 text-sm">
+                <h3 class="font-bold mb-3 text-2xl">Navigation</h3>
+                <ul class="space-y-2 text-gray-500 text-2xl">
                     <li><a href="#" class="hover:text-orange-600">Home</a></li>
                     <li><a href="#" class="hover:text-orange-600">About Us</a></li>
                     <li><a href="#" class="hover:text-orange-600">Blog</a></li>
@@ -349,8 +348,8 @@
 
 
             <div>
-                <h3 class="font-bold mb-3">Resources</h3>
-                <ul class="space-y-2 text-sm">
+                <h3 class="font-bold mb-3 text-2xl">Resources</h3>
+                <ul class="space-y-2 text-gray-500 text-2xl">
                     <li><a href="#" class="hover:text-orange-600">Features</a></li>
                     <li><a href="#" class="hover:text-orange-600">Pricing</a></li>
                     <li><a href="#" class="hover:text-orange-600">Privacy Policy</a></li>
@@ -361,12 +360,16 @@
 
 
             <div>
-                <h3 class="font-bold mb-3">Follow Us</h3>
+                <h3 class="font-bold mb-3 text-2xl">Follow Us</h3>
                 <div class="flex gap-4">
-                    <a href="#"><img src="assets/icon-youtube.png" alt="YouTube" class="w-6"></a>
-                    <a href="#"><img src="assets/icon-twitter.png" alt="Twitter" class="w-6"></a>
-                    <a href="#"><img src="assets/icon-linkedin.png" alt="LinkedIn" class="w-6"></a>
-                    <a href="#"><img src="assets/icon-facebook.png" alt="Facebook" class="w-6"></a>
+                    <a href="https://www.youtube.com/@limonkhan76" target="_blank"><img src="assets/icon-youtube.png"
+                            alt="YouTube" class="w-6"></a>
+                    <a href="https://x.com/LIMON9095" target="_blank"><img src="assets/icon-twitter.png" alt="Twitter"
+                            class="w-6"></a>
+                    <a href="https://www.linkedin.com/in/md-rifadul-haque-limon-2686b1372/" target="_blank"><img
+                            src="assets/icon-linkedin.png" alt="LinkedIn" class="w-6"></a>
+                    <a href="https://www.facebook.com/rifadul76" target="_blank"><img src="assets/icon-facebook.png"
+                            alt="Facebook" class="w-6"></a>
                 </div>
             </div>
         </div>
